# python-subprocess32

./: .appveyor.yml  .hgtags  .travis.yml  ChangeLog  Dockerfile  MANIFEST.in  README.md  README.txt  _posixsubprocess.c  _posixsubprocess_config.h.in  _posixsubprocess_helpers.c  build-manylinux2014-wheel.sh  configure  configure.ac  setup.cfg  setup.py  subprocess32.py  test  test_subprocess32.py
python3_redirect/: __init__.py
testdata/: sigchild_ignore.py
